fix modal being behind chat

--- a/CMS/style/modal.css
+++ b/CMS/style/modal.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     position: fixed;
-    z-index: 1; /* Sit on top */
+    z-index: 1000; /* Sit on top */
     left: 0;
     top: 0;
     width: 100%;
